2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.[ch]:	
        Add g_vfs_backend_get_mount_spec
	
        * daemon/gvfsjobqueryfsinfo.c:
	Fix indentation
	
        * daemon/gvfsjobqueryinfo.c:
	Implement id:fs attribute

2007-10-31  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvolume.c:
	Remove get_platform_id
	
2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Implement find_enclosing_volume
	
        * client/gdaemonvolume.[ch]:
        * client/gdaemonvolumemonitor.c:
	No need to pass volume monitor when
	createing volumes

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.[ch]:
	Add all mount info to GMountInfo
	Make it refcounted
	
        * client/gdaemonvfs.[ch]:
        * client/gdaemonfile.c:
        * client/gdaemonvolumemonitor.c:
	Remove GMountRef, replacing its use with
	GMountInfo

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsjobqueryfsinfo.c:
	Remove volume name attribute

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Update to new API
	
2007-10-30  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.c:
	Handle threads not being initialized
	
        * daemon/gvfsjobqueryfsinfo.c:
	Set volume name

2007-10-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvolumemonitor.c:
	Don't show not user visible mounts

        * daemon/mount.c:
	Don't give fuse mounts for non visible mounts
	(as they don't get mounted)
	
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtrash.c:
	Mark as not user visible
	
2007-10-26  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
	Add registerFuse call
	
        * client/gvfsfusedaemon.c:
	Register with vfs daemon
	Exit (and unmount) if daemon dies
	
        * daemon/mount.c:
	Hand out fuse mountpaths when availible.
	
        * client/gdaemonvfs.[ch]: